# gitpulse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cliff.toml  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  release.yml
.github/scripts/: publish-updater.mjs
.github/workflows/: release.yml
docs/: index.html
docs/personal/: gitpulse_findings.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  blame.rs  branch.rs  cherry_pick.rs  commit.rs  conflict.rs  diff.rs  discard.rs  external.rs  graph.rs  misc.rs  mod.rs  rebase.rs  remote.rs  repo.rs  secrets.rs  staging.rs  stash.rs  status.rs  tag.rs  updates.rs  workspace.rs  worktree.rs
src-tauri/src/config/: settings.rs
src-tauri/src/git/: blame.rs  branch.rs  cherry_pick.rs  commit.rs  conflict.rs  diff.rs  graph.rs  misc.rs  mod.rs  parser.rs  rebase.rs  remote.rs  runner.rs  staging.rs  stash.rs  status.rs  tag.rs  test_utils.rs  types.rs  worktree.rs
src-tauri/src/workspace/: code_workspace.rs  manager.rs  mod.rs  watcher.rs
src/hooks/: useAutoFetch.ts  useAutoUpdater.ts  useFileWatcher.ts  useGit.ts  useRepo.ts
src/lib/: aiCommit.test.ts  aiCommit.ts  branches.test.ts  branches.ts  commitDetails.ts  commitIdentity.ts  conflicts.test.ts  conflicts.ts  errors.test.ts  errors.ts  git.ts  graphLayout.ts  highlight.ts  ids.ts  miscViews.test.ts  miscViews.ts  openTarget.ts  patch.ts  secrets.ts  theme.ts  updates.ts
src/stores/: commitDrafts.test.ts  commitDrafts.ts  diff.test.ts  diff.ts  graph.ts  inlineBlame.ts  mergeDrafts.ts  notifications.ts  output.ts  (+5 more)
(+54 files in other folders)
