[package]
name = "gitpulse"
version = "0.2.0"
edition = "2021"
description = "A VS Code-inspired Git GUI built with Tauri, Rust, and React."
authors = ["hassan-mehedi"]
license = "MIT"
repository = "git@github.com:hassan-mehedi/gitpulse.git"

[lib]
name = "gitpulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ignore = "0.4"
notify = "7"
notify-debouncer-full = "0.4"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
shell-words = "1"
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2"
